--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/app.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700&display=swap" rel="stylesheet">
+    <title>To Do App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
